src/objects/LnP_Parcel__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>Permanent Address</fullName>
                </value>
                <value>
                    <fullName>Other Address</fullName>
                </value>
                <value>
                    <fullName>Physical Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>LnP_Parcels</relationshipLabel>
        <relationshipName>LnP_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW_Application2__c</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>LnP_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County_New_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>LnP_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>LnP_Parcels</relationshipLabel>
        <relationshipName>LnP_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Territory/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LnP_Parcel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LnP_Parcel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LnP_Parcels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>